force-app/main/default/objects/Case_Resolution_Snapshot__c/Case_Resolution_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Case Resolution Snapshot</label>
    <nameField>
        <displayFormat>CRS-{0000}</displayFormat>
        <label>Case Resolution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Resolution Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>