force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Approver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Approver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Resolution Snapshots</relationshipLabel>
    <relationshipName>Case_Resolution_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>