force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Approver_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Approver_Response_Time__c</fullName>
    <label>Approver Response Time (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>