force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <formula>(IF(ISNULL(Case_Reopened_Date__c), Case_Closed_Date__c - Case_Created_Date__c, Case_Closed_Date__c - Case_Reopened_Date__c)* 24* 60)</formula>
    <label>Case Age (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>