force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Date__c</fullName>
    <label>Date/Time Case Closed</label>
    <type>DateTime</type>
</CustomField>