force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Date__c</fullName>
    <label>Date/Time Case Created</label>
    <type>DateTime</type>
</CustomField>