force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Case_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_On_Hold_Date__c</fullName>
    <label>Date/TIme Case On Hold</label>
    <type>DateTime</type>
</CustomField>