force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Case_Picked_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Picked_Up_Date__c</fullName>
    <label>Date/Time Case Picked Up</label>
    <type>DateTime</type>
</CustomField>