force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority__c</fullName>
    <label>Case Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medium - Returns</fullName>
            </value>
            <value>
                <fullName>High - Orders</fullName>
            </value>
            <value>
                <fullName>Samples</fullName>
            </value>
            <value>
                <fullName>Corp-Orders</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>COA</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>CustomerMaster</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>IT Support</fullName>
            </value>
            <value>
                <fullName>Info EU</fullName>
            </value>
            <value>
                <fullName>Orders EMEA</fullName>
            </value>
            <value>
                <fullName>APAC Orders</fullName>
            </value>
            <value>
                <fullName>AP Canada</fullName>
            </value>
            <value>
                <fullName>AR Canada</fullName>
            </value>
            <value>
                <fullName>Service Clients</fullName>
            </value>
            <value>
                <fullName>Sourcing Opportunity</fullName>
            </value>
            <value>
                <fullName>Spain Orders</fullName>
            </value>
            <value>
                <fullName>IT Servizio Clienti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>