force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Case_Reopened_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Reopened_Date__c</fullName>
    <label>Date/Time Case Reopened</label>
    <type>DateTime</type>
</CustomField>