force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Case_resolution_time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_resolution_time_Hours__c</fullName>
    <formula>Resolution_Time__c   / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Resolution Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>