force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Type</valueSetName>
    </valueSet>
</CustomField>