force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Date_Time_Case_Resolution_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Case_Resolution_Start__c</fullName>
    <description>Technical formula to determine start date/time for Case Resolution time.</description>
    <formula>IF(ISNULL(Case_Picked_Up_Date__c),
   IF(
      ISNULL(Case_Reopened_Date__c),
      Case_Created_Date__c,
      Case_Reopened_Date__c
     ),
   Case_Picked_Up_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Case Resolution Start</label>
    <type>DateTime</type>
</CustomField>