force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <formula>((Case_Closed_Date__c -  Date_Time_Case_Resolution_Start__c) * 24* 60) -  Total_Time_in_On_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Time (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>