force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Time_In_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Time_In_On_Hold__c</fullName>
    <formula>IF(ISNULL(Case_On_Hold_Date__c), 0, (Case_Closed_Date__c - Case_On_Hold_Date__c) *24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time In On Hold (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>