force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Time_to_Pick_Up__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Pick_Up__c</fullName>
    <formula>(IF(
  ISNULL(Case_Reopened_Date__c), 
  Case_Picked_Up_Date__c - Case_Created_Date__c
  , Case_Picked_Up_Date__c - Case_Reopened_Date__c
)* 24* 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Pick Up (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>