force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Time_to_Pick_Up_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Pick_Up_Hours__c</fullName>
    <formula>Time_to_Pick_Up__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Pick Up (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>