force-app/main/default/objects/Case_Resolution_Snapshot__c/fields/Total_Time_in_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_in_On_Hold__c</fullName>
    <label>Total Time in On Hold (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>